# bulk-emailandsms

./: .replit  main.py  pyproject.toml  render.yaml  replit.md
attached_assets/: Pasted--BASE-STYLES-RESET--1764757981732_1764757981736.txt  Pasted--COMPLETE-QUALIFICATIONS-PAGE-CSS-Font-Style-1764758964_1764758964011.txt  Pasted--margin-0-padding-0-box-sizing-border-box-root-backgrou_1764745494993.txt  Pasted-2025-12-02T14-04-32-70570168Z-127-0-0-1-02-Dec-2025-14-_1764685731066.txt  Pasted-2025-12-02T14-25-18-527648409Z-2025-12-02T14-25-18-5276_1764686162352.txt  Pasted-document-addEventListener-DOMContentLoaded-function-con_1764745519934.txt
bulkmailzip/: .replit  main.py  render.yaml  requirements.txt  wsgi.py
bulkmailzip/attached_assets/: Pasted--C-Users-Tsie-Masilo-Desktop-Work-bulk-email-and-sms-bu_1764670495032.txt  Pasted-https-dev-blindza-com-static-bulk-mail-pod-bulk-mail-zi_1764666755016.txt
bulkmailzip/bulk_mail/: .containerignore  Containerfile  bulk_mail.py  bulk_mail.sh  bulk_mail.sql  config.py  init_db.py  requirements.txt  wsgi.py  z_commands.txt  z_commands_bulk_mail.txt
bulkmailzip/bulk_mail/app/: __init__.py  extensions.py
bulkmailzip/bulk_mail/app/auth/: __init__.py  forms.py  (+1 more)
bulkmailzip/bulk_mail/bulk_mail_sending/: async_basic_mail.py  basic_mail.py  basic_something.txt  bulk_mail.py  bulk_mail_sending.sh  cronfile.cronjob  db_con.py  mailcow_try_me.py  requirements.txt  sending emails with python.url  smtplib examples.url  z_asyncio.py  z_ct.py  z_end_points.json  z_html.html  z_mailboxes.json  z_test_debugging.txt  zzz_process.txt
(+75 files in other folders)
